Fixed wizard option align

--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -9861,6 +9861,7 @@ $patternSize : 32px;
 					dt {
 						max-width: none;
 						white-space: nowrap;
+						align-items: center;
 					}
 				}
 			}
